# method-studio

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/public/sample-data/: anova_example.csv  cfa_example.csv  correlation_example.csv  descriptives_example.csv  efa_example.csv  independent_ttest_example.csv  index.json  mediation_example.csv  moderated_mediation_example.csv  moderation_example.csv  (+11 more)
apps/desktop/scripts/: install-r-packages.R  prepare-python-macos.sh  prepare-python-windows.ps1  prepare-r-macos.sh  prepare-r-windows.ps1  verify-bundle.js
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: bundled_engines.rs  engine.rs  installer.rs  mod.rs  storage.rs
engines/python-scripts/: anova.py  cfa.py  correlation.py  descriptives.py  efa.py  full_sem.py  mediation.py  moderated_mediation.py  moderation.py  multigroup_cfa.py  multilevel.py  path_analysis.py  regression.py  requirements.txt  serial_mediation.py  ttest.py  wrapper.py
engines/r-scripts/: anova.R  cfa.R  correlation.R  descriptives.R  efa.R  full_sem.R  mediation.R  moderated_mediation.R  moderation.R  multigroup_cfa.R  multilevel.R  path_analysis.R  process_model58.R  process_model59.R  process_model8.R  regression.R  serial_mediation.R  ttest.R  wrapper.R
(+56 files in other folders)
